[gd_scene load_steps=6 format=3 uid="uid://bllugb4ij0vev"]

[ext_resource type="Script" path="res://scripts/option_panel.gd" id="1_ma8cl"]
[ext_resource type="Texture2D" uid="uid://w0bhpcideq48" path="res://assets/taust.png" id="2_6vflv"]
[ext_resource type="Texture2D" uid="uid://bdde5628po1rk" path="res://assets/buttons/exit.png" id="3_vy6t2"]
[ext_resource type="Texture2D" uid="uid://kkx31cuuor7f" path="res://assets/buttons/options.png" id="4_s02eo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ntwak"]
texture = ExtResource("2_6vflv")

[node name="OptionMargin" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 250
script = ExtResource("1_ma8cl")

[node name="OptionPanel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ntwak")

[node name="MarginContainer" type="MarginContainer" parent="OptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="OptionPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="sliderSFXBOX" type="HBoxContainer" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="OptionPanel/MarginContainer/VBoxContainer/sliderSFXBOX"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "SFX:
"

[node name="SFXSlider" type="HSlider" parent="OptionPanel/MarginContainer/VBoxContainer/sliderSFXBOX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="sliderMusicBox" type="HBoxContainer" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="OptionPanel/MarginContainer/VBoxContainer/sliderMusicBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="OptionPanel/MarginContainer/VBoxContainer/sliderMusicBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="Button" type="Button" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
icon = ExtResource("3_vy6t2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Options" type="Sprite2D" parent="OptionPanel/MarginContainer/VBoxContainer"]
position = Vector2(469, 60)
scale = Vector2(0.22963, 0.22963)
texture = ExtResource("4_s02eo")

[connection signal="value_changed" from="OptionPanel/MarginContainer/VBoxContainer/sliderSFXBOX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="OptionPanel/MarginContainer/VBoxContainer/sliderMusicBox/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="OptionPanel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
